--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@ th{background:#2563eb;}
 </head>
 <body>
 
-<h1>Store Loan Manager</h1>
+<h1>Store Manager</h1>
 
 <div class="summary">
 <div>Total Sales<br><strong>{{ total_sales }}</strong></div>
